PI-236 Fix PDU heads endpoint failing due to duplicate PDU codes